# Recon-Properties

./: CMakeLists.txt  CMakeLists.txt.user.f7ac140  README.md  app_icon.rc  authorization.cpp  authorization.h  authorization.ui  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
